<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EssentialDevelopingAndroidFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_your_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <RadioButton
        android:id="@+id/rb_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone_number"
        android:text="@string/option_cheese" />

    <RadioButton
        android:id="@+id/rb_twice_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone_number"
        android:layout_toRightOf="@id/rb_cheese"
        android:text="@string/option_twice_cheese" />

    <RadioButton
        android:id="@+id/rb_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_phone_number"
        android:layout_toRightOf="@id/rb_twice_cheese"
        android:text="@string/option_none" />

    <RadioButton
        android:id="@+id/rb_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_cheese"
        android:text="@string/option_round" />

    <RadioButton
        android:id="@+id/rb_square"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_cheese"
        android:layout_toRightOf="@id/rb_round"
        android:text="@string/option_square" />

    <CheckBox
        android:id="@+id/cb_pepperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_square"
        android:text="@string/option_pepperoni" />

    <CheckBox
        android:id="@+id/cb_mushroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_square"
        android:layout_toRightOf="@id/cb_pepperoni"
        android:text="@string/option_mushroom" />

    <CheckBox
        android:id="@+id/cb_veggies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_square"
        android:layout_toRightOf="@id/cb_mushroom"
        android:text="@string/option_veggies" />

    <TextView
        android:id="@+id/tv_your_ordering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_pepperoni"
        android:text="@string/your_ordering"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_your_ordering"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_ordering" />

</RelativeLayout>