<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_label"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_give_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome"
        android:layout_marginTop="20dp"
        android:text="@string/give_instruction"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/rb_donate_direct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_give_instruction"
        android:layout_weight="1"
        android:text="@string/donate_method_direct" />

    <RadioButton
        android:id="@+id/rb_donate_paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_donate_direct"
        android:text="@string/donate_method_paypal" />

    <NumberPicker
        android:id="@+id/np_wheel"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_below="@id/rb_donate_direct"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:gravity="right"
        tools:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pb_donate"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/np_wheel"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:progress="20" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_donate"
        android:layout_marginTop="20dp"
        android:text="@string/donate_amount"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_donate"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/tv_amount"
        android:ems="10"
        android:inputType="textPersonName"
        tools:inputType="number" />

    <Button
        android:id="@+id/btn_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_amount"
        android:layout_marginTop="15dp"
        android:text="@string/donate" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_amount"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/btn_donate"
        android:gravity="center_vertical"
        android:text="@string/total_donate"
        android:textSize="20dp" />

</RelativeLayout>