<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationFragment">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_label"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_give_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/give_instruction"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <RadioButton
        android:id="@+id/rb_donate_paypal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_method_paypal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_give_instruction" />

    <RadioButton
        android:id="@+id/rb_donate_direct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_method_direct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_donate_paypal" />

    <NumberPicker
        android:id="@+id/np_wheel"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_give_instruction"
        tools:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pb_donate"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:progress="20"
        app:layout_constraintBottom_toTopOf="@id/tv_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/np_wheel" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/donate_amount"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/pb_donate" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_amount"
        app:layout_constraintTop_toBottomOf="@id/pb_donate"
        tools:inputType="number" />

    <Button
        android:id="@+id/btn_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/donate"
        app:layout_constraintTop_toBottomOf="@id/et_amount" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_donate"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_donate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_donate"
        app:layout_constraintTop_toTopOf="@id/btn_donate" />

</androidx.constraintlayout.widget.ConstraintLayout>